--- a/_data/weeklyify.yml
+++ b/_data/weeklyify.yml
@@ -22,15 +22,16 @@ Amdusias: [Paramore- Rose-colored Boy, Fox Capture Plan - Greatest Blue, Cavern 
   "\u2605STAR GUiTAR- Live", Camp Cope- How To Socialize & Make Friends, Alva Noto
     & Ryuichi Sakamoto- Glass, 'Oathbreaker- 10:56 / Second Son of R.', clipping.
     - The Deep, Hookworms- Ullswater, Haken- Nil By Mouth, DJ Shadow - Horror Show,
-  Protest the Hero - Caravan, Black Moth- Moonbow, You Drive- Hold On, Sweet Valley-
-    Chameleon, Sorority Noise- No Halo, Shamir - Straight Boy, Mutemath - Prytania,
-  No Age- Cruise Control, Saba- Broken Girls, Meshuggah - I, Illuminati Hotties- Pressed
-    2 Death, Rapsody - Power, Sylvan LaCue- Empathy, TRUTHR- Earth II, Dishwalla-
-    Counting Blue Cars, God Is An Astronaut- Seance Room, Kamasi Washington- Truth,
-  London Grammar- Non Believer, Phoebe Bridgers- Funeral, "Archspire- Involuntary\
-    \ Doppelg\xE4nger", Shame- Dust on Trial, Allie X- Paper Love, Snarky Puppy- Shofukan,
-  Pryapisme - Totipotence D'un Erg, Meniscus- Doom]
-Chiaro: [Flying Lotus - And The World Laughs With You, Daughters - Satan in the Wait]
+  Protest the Hero - Caravan, Black Moth- Moonbow, 'MONO- Nowhere, Now Here', You
+    Drive- Hold On, Sweet Valley- Chameleon, Sorority Noise- No Halo, Shamir - Straight
+    Boy, Mutemath - Prytania, No Age- Cruise Control, Saba- Broken Girls, Meshuggah
+    - I, Illuminati Hotties- Pressed 2 Death, Rapsody - Power, Sylvan LaCue- Empathy,
+  TRUTHR- Earth II, Dishwalla- Counting Blue Cars, God Is An Astronaut- Seance Room,
+  Kamasi Washington- Truth, London Grammar- Non Believer, Phoebe Bridgers- Funeral,
+  "Archspire- Involuntary Doppelg\xE4nger", Shame- Dust on Trial, Allie X- Paper Love,
+  Snarky Puppy- Shofukan, Pryapisme - Totipotence D'un Erg, Meniscus- Doom]
+Chiaro: [Flying Lotus - And The World Laughs With You, Daughters - Satan in the Wait,
+  Son Lux - Your Day Will Come]
 Din: [Eat Randy - Julian Smith]
 Din Fleetpaw: [Richard Cheese - Down with the Sickness, David Hutter - Globgogabgalab,
   Gloryhammer - The Unicorn Invasion of Dundee, LIBYTHTH - It's My Beak, 'Billy Joel,
@@ -44,6 +45,7 @@ Fleas: [Cold Cave - Confetti]
 Jasper: ['Phoenix Spreading It''s Wings, writen by Hu Tianchuan and Dong Hongde preformed
     by the little giant Chinese Chamber Orchestra']
 Kailys: [Vessels - Elliptic]
+Kazma: [Max Tundra - Until We Die]
 Klyvert: [The Waterboys - This Is The Sea, Galaxie 500 - Tugboat]
 Knacker: [The Moody Blues - Legend of a Mind, 'Michael Geyre, Shinichi Sakamoto -
     Monster-Town', They Might Be Giants - When the Light Comes On]
@@ -77,6 +79,7 @@ Lu: [Basement Jaxx vs. Metropole Orkest - Good Luck, Stars - Fluorescent Lights,
   Darren Hayes - A Conversation With God]
 Lunostophiles: [Ghost - Rats, 'Inital Talk, Dua Lipa - New Rules [Initial Talk Remix]',
   Dessa - Half of You, Hannah Diamond - Hi]
+Maddy: [Weezer - No Scrubs]
 Makyo: [Todd Reynolds/Nick Zammuto - Fast Pasture, Fiona Apple - Hot Knife, Morten
     Lauridsen - Lux Aeterna, "R\xF6yksopp - Electric Counterpoint III. Fast - RYXP\
     \ True To Original Edit", Zammuto - It Can Feel So Good, Esperanza Spalding -
@@ -99,6 +102,7 @@ Makyo: [Todd Reynolds/Nick Zammuto - Fast Pasture, Fiona Apple - Hot Knife, Mort
   Vitas - Opera 2, XTC - Complicated Game, Worriers - They/Them/Theirs]
 Mando: [Negrita - Rotolando Verso Sud]
 Miko: [Kastor - Melody I Hear In Your Heartbeat, DADABOTS - Wead]
+Monokhrome: [KEY - Honest]
 Peri: [Klimchak - Rain Wings, Miss Eaves - Single A.F., Frost* - Heartstrings, Dengue
     Fever - Sni Bong, KCRW - Lost Notes, Darth Vegas - Gritos Dulces, Busdriver -
     Imaginary Places, Hrishikesh Hirway - Song Exploder, BomBARDed - A Musical Dungeons
@@ -116,14 +120,14 @@ Proxy: [Haru Nemuri - narashite, Plastic Girl in Closet - VAMPIRE, Iglooghost - 
     Me, FKA twigs - Glass & Patron, "Bj\xF6rk - Pluto", Yuragi - night is young, Yasutaka
     Nakata - Give You More, Mykki Blanco - The Plug Won't, The World Is A Beautiful
     Place & I Am No Longer Afraid To Die - The Future, "Mondo Grosso, Etsuko Yakushimaru\
-    \ - \u60D1\u661F\u30BF\u30F3\u30C8\u30E9", Iglooghost - Black Light Ultra, Closer
-    - Gift Shop, Alice Glass - Without Love (Chelsea Wolfe Remix), tUnE-yArDs - ABC
-    123, Nonsens & TREKKIE TRAX CREW - Ballistic (feat. Ashnikko), Carly Rae Jepsen
-    - Cut To The Feeling, Clap Your Hands Say Yeah - The Vanity Of Trying, 'Now, Now
-    - MJ', Yaeji - Last Breath, Hop Along - How Simple, "\u2020\u2021\u2020 - Baba\
-    \ Vanga", Dan Deacon - Learning To Relax, Baths - Adam Copies, boygenius - Stay
-    Down, Kelela - Onanon, Pedestrian Deposit - You Didn't Break Me, The Body & Full
-    Of Hell - Earth Is A Cage, Remo-con - Vermillion, Rosemary & Garlic - Wintering,
+    \ - \u60D1\u661F\u30BF\u30F3\u30C8\u30E9", Makthaverskan - Demands, Iglooghost
+    - Black Light Ultra, Closer - Gift Shop, Alice Glass - Without Love (Chelsea Wolfe
+    Remix), tUnE-yArDs - ABC 123, Nonsens & TREKKIE TRAX CREW - Ballistic (feat. Ashnikko),
+  Carly Rae Jepsen - Cut To The Feeling, Clap Your Hands Say Yeah - The Vanity Of
+    Trying, 'Now, Now - MJ', Yaeji - Last Breath, Hop Along - How Simple, "\u2020\u2021\
+    \u2020 - Baba Vanga", Dan Deacon - Learning To Relax, Baths - Adam Copies, boygenius
+    - Stay Down, Kelela - Onanon, Pedestrian Deposit - You Didn't Break Me, The Body
+    & Full Of Hell - Earth Is A Cage, Remo-con - Vermillion, Rosemary & Garlic - Wintering,
   Angel Olsen - Shut Up Kiss Me, Brockhampton - JUNKY, Sidewalks and Skeletons - The
     Void]
 Rodo: [Lemon Demon - When He Died, Soulja Boy - Anime]
